--- a/src/views/pages/home.hbs
+++ b/src/views/pages/home.hbs
@@ -1,7 +1,7 @@
 {{#section 'title'}}My Link{{/section}}
-<div class="w-screen h-screen bg-[#e6ccb2]">
-  <div id="divMainContainer" class="container h-full  mx-auto flex flex-col items-center justify-center">
-    <h1 class="text-5xl font-bold -translate-y-10">Hai Hau</h1>
+<div class="w-screen min-h-full h-full bg-[#e6ccb2]">
+  <div id="divMainContainer" class="container h-full mx-auto flex flex-col items-center justify-center overflow-auto">
+    <h1 class="text-5xl font-bold">Hai Hau</h1>
     <h2 class="text-2xl">Make better links</h2>
     
     <div class="relative mt-4 w-4/5 max-w-xl">
@@ -18,6 +18,16 @@
   </div>
 </div>
 
+{{#section 'css'}}
+<style>
+  html, body {
+    width:100%;
+    height:100%;
+  }
+</style>
+{{/section}}
+
 {{#section 'js'}}
 <script src="/js/pages/home.js" type="text/javascript"></script>
+<script src="/js/libs/qrcode.min.js" type="text/javascript"></script>
 {{/section}}
